--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,14 +3,13 @@
  */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
+body{
+  margin-top: 50px;
 }
-
-
 /*
  * Global add-ons
  */
+
 
 .sub-header {
   padding-bottom: 10px;
