--- a/src/assets/bootstrap/css/bootstrap.css
+++ b/src/assets/bootstrap/css/bootstrap.css
@@ -1603,6 +1603,7 @@ pre code {
   }
 }
 .container-fluid {
+  text-align: start!important;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
